<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <RelativeLayout
        android:id="@+id/re_login"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingLeft="10dp">

        <ImageView
            android:id="@+id/img_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/custom_button"
            android:src="@drawable/ic_login_black_24dp" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_toRightOf="@+id/img_login"
            android:fontFamily="@font/neosan"
            android:paddingLeft="10dp"
            android:text="@string/frag_login"
            android:textColor="#dd000000"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_login_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/custom_hide"
            android:paddingRight="5dp"
            android:src="@drawable/ic__next_black_24dp" />
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20sp">

        <RelativeLayout
            android:id="@+id/re_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp">

            <ImageView
                android:id="@+id/img_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@drawable/custom_button"
                android:src="@drawable/ic_home_black_24dp" />

            <TextView
                android:id="@+id/tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_toRightOf="@+id/img_home"
                android:fontFamily="@font/neosan"
                android:paddingLeft="10dp"
                android:text="@string/frag_home"
                android:textColor="#dd000000" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/re_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp">

            <ImageView
                android:id="@+id/img_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@drawable/custom_button"
                android:src="@drawable/ic_song_black_24dp" />

            <TextView
                android:id="@+id/tv_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_toRightOf="@+id/img_song"
                android:fontFamily="@font/neosan"
                android:paddingLeft="10dp"
                android:text="@string/frag_playlist"
                android:textColor="#dd000000" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/re_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp">

            <ImageView
                android:id="@+id/img_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@drawable/custom_button"
                android:src="@drawable/ic_settings_black_24dp" />

            <TextView
                android:id="@+id/tv_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_toRightOf="@+id/img_settings"
                android:fontFamily="@font/neosan"
                android:paddingLeft="10dp"
                android:text="@string/frag_settings"
                android:textColor="#dd000000" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/re_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp">

            <ImageView
                android:id="@+id/img_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@drawable/custom_button"
                android:src="@drawable/ic_about_black_24dp" />

            <TextView
                android:id="@+id/tv_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_toRightOf="@+id/img_about"
                android:fontFamily="@font/neosan"
                android:paddingLeft="10dp"
                android:text="@string/frag_about_us"
                android:textColor="#dd000000" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/tv_about_show"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/padding_10"
                android:fontFamily="@font/neosan"
                android:textAlignment="center"
                android:textColor="#dd000000"
                android:textSize="20dp"
                android:textStyle="bold" />

        </RelativeLayout>


    </LinearLayout>


</LinearLayout>